# HM_Neuron_Genzel

./: .gitignore  README.md  RecordingMeta.xlsx  constraints.txt  debug.bat  hm_tracker_paths.example.txt  install.bat  pyproject.toml  reproduce.yml  requirements.txt  requirements_core.txt  requirements_mac.txt  runner.py  runner_unix.sh  runner_windows.bat  tracker_gui.py
docs/: ERROR_REFERENCE.md  Protocol_Tracker_HexMaze_Rat_2026_Jill.md  RecordingMeta_README.md  TROUBLESHOOTING.md  TROUBLESHOOTING_EPHYS.md  TROUBLESHOOTING_PIPELINE.md  TROUBLESHOOTING_SETUP.md
examples/: RecordingMeta.xlsx  hm_tracker_paths.example.txt
genzeltracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
requirements/: reproduce.yml  requirements.txt
scripts/: runner_unix.sh  runner_windows.bat
src/: TrackerYolov11.py  Video_LED_Sync_using_ICA.py  join_views.py  plot_trials.py
src/dlc/: dlc_coordinates.py  dlc_predictioin.py  sleap_postprocess.py  sleap_prediction.py  tracking_eyes.py
src/node_analysis/: hex_maze_analysis.py
src/nwb/: add_units.py  create_nwb.py  decode_position.py  make_videos.py  neural_umap.py  predictive_coding.py  run_create_nwb.bat  session_prefix.py  session_summary.py  spike_metrics.py  test.ipynb  visualize_nwb.py
src/sorter/: continue_sorting.py  emg_from_lfp.py  export_emg_from_lfp.py  export_lfp.py  export_motion.py  readTrodesExtractedDataFile3.py  recompute_metrics.py  session_prefix.py  sorter_common.py  sorting.py
src/tools/: define_maze_roi.py  find_videos.py  fix_video_names.py  gpuslot.py  maze_roi.txt  organize_data.py  pathnames.py  prepare_meta.py  preprocess_check.py  process_dataframe.py  process_log.py  process_txt.py  reset_videos.py  scan_drive.py  scan_drive_gui.py  summarize.py  vcodec.py
src/tracker/: TrackerYolov11.py  Video_LED_Sync_using_ICA.py  join_views.py  plot_trials.py
